# document-ai2

./: .dockerignore  .env.example  .gitignore  DEPLOY-PORTAINER.md  Dockerfile  README.md  docker-compose.local.yml  docker-compose.portainer.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/core/: config.py
app/models/: category_type.py  document.py  publication_type.py
app/prompts/: extract_prompt.py
app/services/: excel_service.py  llm_service.py  ocr_service.py  pdf_service.py  storage_service.py
app/ui/: main_page.py  processing_section.py  results_section.py  sidebar.py  state.py  upload_section.py  uploader.py
app/utils/: logger.py  parsers.py  text_reducer.py
scripts/: docker.sh  docker_deploy.py
streamlit/: config.toml
tests/: test_parsers.py  test_text_reducer.py
